3B - update admin-seller-profile

--- a/3B-NEW/admin-seller-profile.html
+++ b/3B-NEW/admin-seller-profile.html
@@ -386,94 +386,67 @@
 				<!-- BEGIN BOX -->
 				<div class="box">
 					<form action="#" role="form">
-						<div class="box-header">
-							<h3 class="box-title">
-								Quản lý Shop
-							</h3>
-						</div>
+						
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body advertising">
 							<div class="row">
 								<div class="col-md-6">
-									<div class="input-group">
-										<span class="input-group-addon"><i class="fa fa-search"></i></span>
-										<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Tìm theo tên, username, số điện thoại cửa hàng">
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="input-group">
-										<span class="input-group-addon"><i class="fa fa-search"></i></span>
-										<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Tìm theo tên sản phẩm">
-									</div>
-								</div>
-								<div class="clearfix"></div>
-								
-							</div>
+									<div class="box-widget">
+										<div class="box-widget-header" style="background: url('assets/images/test-cover-photo.png') center center;">
+										</div>
 
-							<div class="table-responsive">
-								<!-- BEGIN TABLE PRODUCTS -->
-								<table class="table table-hover">
-									<thead>
-										<tr>
-											<th width="35%">Shop</th>
-											<th>Số sản phẩm đang bán</th>
-											<th>Số đơn hàng</th>
-											<th class="action">Thao tác</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>
-												<div class="custom-wrap-line"><a href="admin-seller-profile.html" target="_blank">Lorem isum dolor set amit deportible alquada mit Lorem isum dolor set amit deportible alquada mit</a></div>
-											</td>
-											<td><a href="admin-product-list.html" target="_blank">123</a></td>
-											<td><a href="seller-order-pairing.html">455</a></td>
-											<td>
-												<div class="btn-group">
-													<button type="button" class="btn btn-success btn-xs">Dừng hoạt động</button>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="custom-wrap-line"><a href="admin-seller-profile.html" target="_blank">Lorem isum dolor set amit</a></div>
-											</td>
-											<td><a href="admin-product-list.html" target="_blank">123</a></td>
-											<td>455</td>
-											<td>
-												<div class="btn-group">
-													<button type="button" class="btn btn-success btn-xs">Mở hoạt động</button>
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-								<!-- /END TABLE PRODUCTS -->
-							</div>
+										<div class="ava-wrapper">
+											<img src="assets/images/test-ava-photo.jpg" class="profile-user-img img-responsive img-circle" alt="User profile picture">
+											<div class="upload-wrapper"></div>
+										</div>
 
-							<!-- BEGIN PAGINATION -->
-							<div class="pagi pull-right">
-								<div class="row">
-									<div class="col-md-10">
-										<ul class="pagination no-margin pull-right">
-											<li><a href="#">«</a></li>
-											<li><a href="#">1</a></li>
-											<li><a href="#">2</a></li>
-											<li><a href="#">3</a></li>
-											<li><a href="#">»</a></li>
-										</ul>
-									</div>
-									<div class="col-md-2">
-										<div class="input-group small">
-											<span class="input-group-btn">
-												<button type="button" class="btn btn-green btn-flat">Đi tới trang</button>
-											</span>
-											<input type="text" class="form-control">
+										<div class="box-widget-content">
+											<ul class="nav nav-stacked">
+												<li>
+													<div class="stack-block">
+														<img class="icons-svg" src="assets/images/svg/store.svg"> Xem Store <a href="../3B-WEB/store-home.html" target="_blank"><span class="pull-right"><img class="icons-svg" src="assets/images/svg/screen.svg"></span></a>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														Số điện thoại: 0123456789 <span class="pull-right">Email: abc123@mail.com</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														Mô tả: shop chuyên cung cấp sỉ lẻ các mặt hàng
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-commenting-o"></i> Tỉ lệ phản hồi <span class="pull-right badge bg-green">31%</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-clock-o"></i> Thời gian phản hồi <span class="pull-right badge bg-green">khoảng vài giờ</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-truck"></i> Chuẩn bị hàng trung bình <span class="pull-right badge bg-green">2 - 3 ngày</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-star-half-empty"></i> Đánh giá store <span class="pull-right badge bg-green">8.5</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-cubes"></i> Tỉ lệ thành công đơn hàng <span class="pull-right badge bg-green">4.00%</span>
+													</div>
+												</li>
+											</ul>
 										</div>
 									</div>
 								</div>
 							</div>
-							<!-- /END PAGINATION -->
 						</div>
 						<!-- /END BOX BODY -->
 					</form>
