--- a/3B-NEW/admin-order-list-shipping.html
+++ b/3B-NEW/admin-order-list-shipping.html
@@ -286,7 +286,7 @@
 						<img class="icons-svg" src="assets/images/svg/order.svg"> <span>Quản lý hóa đơn</span>
 						<ul class="sub-menu">
 							<li>
-								<a href="#"><span>Tất cả</span></a>
+								<a href="admin-order-list.html"><span>Tất cả</span></a>
 							</li>
 							<li>
 								<a href="#"><span>Xem theo Store</span></a>
@@ -376,7 +376,7 @@
 			<section class="content-header">
 				<ol class="breadcrumb">
 					<li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-					<li class="active">Quản lý Shop</li>
+					<li class="active">Quản lý hóa đơn</li>
 				</ol>
 			</section>
 			<!-- /END CONTENT HEADER -->
@@ -388,94 +388,211 @@
 					<form action="#" role="form">
 						<div class="box-header">
 							<h3 class="box-title">
-								Quản lý Shop
+								Quản lý hóa đơn
 							</h3>
 						</div>
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body advertising">
-							<div class="row search-block">
-								<div class="col-md-6">
-									<div class="search-block-wrap">
-										<div class="search-block-default">
-											<input type="text" name="order-code" class="form-control" placeholder="Tìm theo tên, username, số điện thoại cửa hàng">
-											<span><i class="fa fa-caret-down"></i></span>
+							<div class="row">
+								<div class="col-md-5">
+									<h4>Thời gian</h4>
+									<div class="form-group time-period">
+										<div class="opt1 pull-left margin-b">
+											<label class="radio-button pull-left no-margin pad6">
+												<input type="radio" name="opt_timeperiod" id="optionsRadios3" data-target-none="timeperiod" checked> 
+												<span class="helping-el"></span>
+												<span class="label-text"></span>
+											</label>
+											<div class="pull-left">
+												<select class="form-control">
+													<option selected="selected">Tháng này</option>
+													<option>Hôm nay</option>
+													<option>Hôm qua</option>
+													<option>Tuần này</option>
+													<option>Tháng trước</option>
+												</select>
+											</div>
 										</div>
-										<div class="search-block-item">
-											<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Tìm theo tên sản phẩm">
+										<div class="clearfix"></div>
+										<div class="opt2">
+											<label class="radio-button">
+												<input type="radio" name="opt_timeperiod" id="optionsRadios4" data-target="timeperiod"> 
+												<span class="helping-el"></span>
+												<span class="label-text">Thiết lập ngày bắt đầu / kết thúc</span>
+											</label>
+											<div class="targetbox target_timeperiod">
+
+												<div class="input-daterange">
+													<div class="col-md-6">
+														<div class="form-group">
+															<div class="input-group small">
+																<span class="input-group-btn">
+																	<span class="btn">Từ</span>
+																</span>
+																<input type="text" class="input-sm form-control" name="start" />
+															</div>
+														</div>
+													</div>
+													<div class="col-md-6">
+														<div class="form-group">
+															<div class="input-group small">
+																<span class="input-group-btn">
+																	<span class="btn">đến</span>
+																</span>
+																<input type="text" class="input-sm form-control" name="end" />
+															</div>
+														</div>
+													</div>
+												</div>
+
+											</div>
 										</div>
 									</div>
-								</div>
 
-								<div class="col-md-2">
-									<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
+								</div>
+								<div class="col-md-7">
+									<div class="row search-block">
+										<div class="col-md-10">
+											<div class="search-block-wrap">
+												<div class="search-block-default">
+													<input type="text" name="order-code" class="form-control" placeholder="Tìm theo mã đơn hàng">
+													<span><i class="fa fa-caret-down"></i></span>
+												</div>
+												<div class="search-block-item">
+													<input type="text" id="shop-name" name="product-name" class="form-control" placeholder="Theo tên shop">
+													<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Theo tên sản phẩm">
+													<input type="text" id="shipping-code" name="product-name" class="form-control" placeholder="Theo mã vận đơn">
+													<input type="text" id="buyer-name" name="product-name" class="form-control" placeholder="Theo tên người mua">
+												</div>
+											</div>
+										</div>
+
+										<div class="col-md-2">
+											<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
+										</div>
+									</div>
 								</div>
 								<div class="clearfix"></div>
+								
 							</div>
 
-							<div class="table-responsive">
-								<!-- BEGIN TABLE PRODUCTS -->
-								<table class="table table-hover">
-									<thead>
-										<tr>
-											<th width="35%">Shop</th>
-											<th>Số sản phẩm đang bán</th>
-											<th>Số đơn hàng</th>
-											<th class="action">Thao tác</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>
-												<div class="custom-wrap-line"><a href="admin-seller-profile.html" target="_blank">Lorem isum dolor set amit deportible alquada mit Lorem isum dolor set amit deportible alquada mit</a></div>
-											</td>
-											<td><a href="admin-product-list.html" target="_blank">123</a></td>
-											<td><a href="seller-order-pairing.html">455</a></td>
-											<td>
-												<div class="btn-group">
-													<button type="button" class="btn btn-success btn-xs">Dừng hoạt động</button>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div class="custom-wrap-line"><a href="admin-seller-profile.html" target="_blank">Lorem isum dolor set amit</a></div>
-											</td>
-											<td><a href="admin-product-list.html" target="_blank">123</a></td>
-											<td>455</td>
-											<td>
-												<div class="btn-group">
-													<button type="button" class="btn btn-success btn-xs">Mở hoạt động</button>
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-								<!-- /END TABLE PRODUCTS -->
-							</div>
-
-							<!-- BEGIN PAGINATION -->
-							<div class="pagi pull-right">
-								<div class="row">
-									<div class="col-md-10">
-										<ul class="pagination no-margin pull-right">
-											<li><a href="#">«</a></li>
-											<li><a href="#">1</a></li>
-											<li><a href="#">2</a></li>
-											<li><a href="#">3</a></li>
-											<li><a href="#">»</a></li>
+							<!-- CONTENT -->
+							<section class="content">
+								<div class="buyer-order">
+									<div class="filter">
+										<ul>
+											<li><a href="admin-order-list.html">Pairing</a></li>
+											<li><a href="admin-order-list-waiting.html">Waiting confirm</a></li>
+											<li><a href="admin-order-list-waiting-ship.html">Wait ship</a></li>
+											<li class="active"><a href="admin-order-list-shipping.html">Shipping</a></li>
+											<li><a href="admin-order-list-delivered.html">Delivered</a></li>
+											<li><a href="admin-order-list-canceled.html">Canceled</a></li>
+											<li><a href="admin-order-list-return.html">Return / Refund</a></li>
 										</ul>
 									</div>
-									<div class="col-md-2">
-										<div class="input-group small">
-											<span class="input-group-btn">
-												<button type="button" class="btn btn-green btn-flat">Đi tới trang</button>
-											</span>
-											<input type="text" class="form-control">
-										</div>
-									</div>
 								</div>
-							</div>
-							<!-- /END PAGINATION -->
+
+								<div class="cart-block">
+									<!-- BEGIN CART LIST -->
+									<div class="cart-list">
+										<!-- BEGIN SHOP ITEM -->
+										<div class="cart-shop-item">
+											<!-- BEGIN HEAD -->
+											<div class="head">
+												<h3><img class="logo" src="assets/images/store-logo-sm.png">Shop name with long text</h3>
+
+												<ul class="status">
+													<li class="waiting-ship"><span>Shipping</span></li>
+												</ul>
+											</div>
+											<!-- BEGIN BODY -->
+											<div class="body">
+												<!-- BEGIN PRODUCT ITEM -->
+												<div class="p-item">
+													<div class="row">
+														<div class="col-md-6">
+															<img class="pull-left p-image" src="assets/images/img28.png">
+															<div class="p-info pull-left">
+																<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+																<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
+																<div class="method">Buy method: <span class="text-green">Personal</span></div>
+															</div>
+														</div>
+
+														<div class="col-md-6">
+															<div class="price pull-right">
+																<span>$146,99</span>
+																<span class="sale">$180,00</span>
+															</div>
+
+															<div class="p-quality pull-right">
+																<span>X1</span>
+															</div>
+															<div class="clearfix"></div>
+														</div>
+													</div>
+												</div>
+												<!-- /END PRODUCT ITEM -->
+
+												<!-- BEGIN PRODUCT ITEM -->
+												<div class="p-item">
+													<div class="row">
+														<div class="col-md-6">
+															<img class="pull-left p-image" src="assets/images/img28.png">
+															<div class="p-info pull-left">
+																<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+																<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
+																<div class="method">Buy method: <span class="text-green">Group</span></div>
+															</div>
+														</div>
+
+														<div class="col-md-6">
+
+															<div class="price pull-right">
+																<span>$146,99</span>
+																<span class="sale">$180,00</span>
+															</div>
+
+															<div class="p-quality pull-right">
+																<span>X1</span>
+															</div>
+															<div class="clearfix"></div>
+														</div>
+													</div>
+												</div>
+												<!-- /END PRODUCT ITEM -->
+											</div>
+
+											<div class="total-items">
+												<div class="row">
+													<div class="col-md-4">
+														<div class="total">Total items: <span>3</span></div>
+													</div>
+													<div class="col-md-4">
+														<div class="total">Expected delivery: <span>23-09-2019</span></div>
+													</div>
+													<div class="col-md-4">
+														<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
+													</div>
+													<div class="clearfix"></div>
+												</div>
+											</div>
+
+											<!-- BEGIN FOOT -->
+											<div class="foot">
+												<div class="pull-left">
+													<p><img src="assets/images/svg/delivery-truck-2.svg"> Giao hàng nhanh</p>
+												</div>
+												<div class="pull-right text-green">Đã lấy hàng</div>
+												<div class="clearfix"></div>
+											</div>
+										</div>
+										<!-- /END SHOP ITEM -->
+									</div>
+									<!-- /END CART LIST -->
+								</div>
+							</section>
+							<!-- /END CONTENT -->
 						</div>
 						<!-- /END BOX BODY -->
 					</form>
@@ -524,21 +641,10 @@
 	<script type="text/javascript">
 		(function($){
 			$(function(){
-				$('input[type="radio"]').click(function() {
-					var target_none = $(this).attr('data-target-none');
-					var target = $(this).attr('data-target');
-					if (typeof target !== typeof undefined && target !== false) {
-						var targetBox = $(".target_" + target);
-						$(targetBox).show();
-					} else {
-						var targetBox = $(".target_" + target_none);
-						$(targetBox).hide();
-					}
-				});
-
 				$('.input-daterange').datepicker({
 					format: "dd/mm/yyyy"
 				});
+
 
 				$('.search-block-default i').click(function(){
 					if( ! $(this).hasClass('active') ) {
