3B - update seller-shipping-policy

--- a/3B-NEW/seller-shipping-policy-price.html
+++ b/3B-NEW/seller-shipping-policy-price.html
@@ -293,8 +293,8 @@
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
-								<div class="col-md-8">
-									<div class="form-group col-md-12">
+								<div class="col-md-9">
+									<div class="form-group col-md-6">
 										<label class="col-md-3" style="padding:9px 0;">Đơn vị tính</label>
 										<div class="input-group col-md-9">
 											<span class="input-group-addon"><i class="fa fa-folder-o"></i></span>
@@ -304,6 +304,14 @@
 											</select>
 										</div>
 									</div>
+									<div class="form-group col-md-6">
+										<label class="col-md-5" style="padding:9px 0;">Số km giao hàng tối đa</label>
+										<div class="input-group col-md-7">
+											<input type="text" class="form-control">
+											<span class="input-group-addon">km</span>
+										</div>
+									</div>
+									<div class="clearfix"></div>
 									<h4 class="col-md-12">Mức Phí 1 <a href="#"><span class="badge bg-red"><i class="fa fa-trash-o"></i></span></a></h4>
 
 									<div class="form-group col-md-6">
@@ -325,20 +333,14 @@
 										<label>Mức phí mô tả</label>
 										<textarea class="form-control" rows="3" placeholder="Mức phí mô tả"></textarea>
 									</div>
-									<div class="form-group col-md-12">
-										<label class="col-md-4" style="padding:9px 0;">Giá trị đơn hàng được miễn phí</label>
+									<div class="form-group col-md-6">
+										<label class="col-md-4" style="padding:9px 0;">Số km đc miễn phí</label>
 										<div class="input-group col-md-8">
 											<input type="text" class="form-control">
 											<span class="input-group-addon">đ</span>
 										</div>
 									</div>
-									<div class="form-group col-md-9">
-										<label class="col-md-5" style="padding:9px 0;">Bán kính giao hàng tối đa</label>
-										<div class="input-group col-md-7">
-											<input type="text" class="form-control">
-											<span class="input-group-addon">km</span>
-										</div>
-									</div>
+									<div class="clearfix"></div>
 									<div class="col-md-3">
 										<button type="button" class="btn btn-danger">Thêm mới mức phí</button>
 									</div>
