3B - update style seller-statistic

--- a/3B-NEW/seller-statistic.html
+++ b/3B-NEW/seller-statistic.html
@@ -326,7 +326,9 @@
 								</div>
 							</div>
 							<div class="col-md-3">
+								<div class="icon"><i class="fa fa-level-down"></i></div>
 								<div class="icon"><i class="fa fa-level-up"></i></div>
+								<div class="icon"><i class="fa fa-minus-circle"></i></div>
 								<div class="box-info">
 									<div class="text-red numb">-59.06%</div>
 									<div class="info">So với hôm qua</div>
