3B - update text seller-shipping-policy

--- a/3B-NEW/seller-shipping-policy-kg.html
+++ b/3B-NEW/seller-shipping-policy-kg.html
@@ -334,8 +334,8 @@
 										<textarea class="form-control" rows="3" placeholder="Mức phí mô tả"></textarea>
 									</div>
 									<div class="form-group col-md-6">
-										<label class="col-md-4" style="padding:9px 0;">Số km đc miễn phí</label>
-										<div class="input-group col-md-8">
+										<label class="col-md-5" style="padding:9px 0;">Số km được miễn phí</label>
+										<div class="input-group col-md-7">
 											<input type="text" class="form-control">
 											<span class="input-group-addon">km</span>
 										</div>
