--- a/3B-NEW/seller-products-form-add.html
+++ b/3B-NEW/seller-products-form-add.html
@@ -736,6 +736,7 @@
 													<h5>Người bán cần thiết lập bảng giá shop tự vận chuyển trước khi áp dụng phương thức shop tự vận chuyển</h5>
 													<p>Bạn có thể <a href="seller-shipping-policy-kg.html" target="_blank">nhấn tại đây</a> để mở kênh vận chuyển cho sản phẩm của mình</p>
 													<p>File tải lên phải là định dạng .jpeg, .png, .jpg, .gìf và tối đa là 500kb</p>
+													<p><a href="seller-shipping-policy-kg.html" target="_blank">Xem bảng giá vận chuyển mẫu</a></p>
 												</div>
 
 												<div class="list-trans">
