--- a/3B-NEW/seller-products-form-add.html
+++ b/3B-NEW/seller-products-form-add.html
@@ -736,7 +736,7 @@
 													<h5>Người bán cần thiết lập bảng giá shop tự vận chuyển trước khi áp dụng phương thức shop tự vận chuyển</h5>
 													<p>Bạn có thể <a href="seller-shipping-policy-kg.html" target="_blank">nhấn tại đây</a> để mở kênh vận chuyển cho sản phẩm của mình</p>
 													<p>File tải lên phải là định dạng .jpeg, .png, .jpg, .gìf và tối đa là 500kb</p>
-													<p><a href="seller-shipping-policy-kg.html" target="_blank">Xem bảng giá vận chuyển mẫu</a></p>
+													<p><a href="#" data-toggle="modal" data-target="#modalShippingPolicy">Xem bảng giá vận chuyển mẫu</a></p>
 												</div>
 
 												<div class="list-trans">
@@ -1077,6 +1077,29 @@
 		</div>
 	</div>
 	<!-- /END MODAL VIDEO LINK -->
+
+	<div class="modal fade" id="modalShippingPolicy" data-backdrop="static">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Chính sách vận chuyển shop</h4>
+				</div>
+
+				<!-- BEGIN FORM -->
+				<div class="modal-body">
+					<p>Ảnh Chính sách vận chuyển shop</p>
+				</div>
+				<!-- /END FORM -->
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-flat btn-default pull-left btn-close" data-dismiss="modal">Đóng</button>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div class="menu-block">
 		<ul>
