--- a/3B-NEW/seller-products-form-add.html
+++ b/3B-NEW/seller-products-form-add.html
@@ -1084,12 +1084,12 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Chính sách vận chuyển shop</h4>
+					<h4 class="modal-title">Bảng giá mẫu</h4>
 				</div>
 
 				<!-- BEGIN FORM -->
 				<div class="modal-body">
-					<p>Ảnh Chính sách vận chuyển shop</p>
+					<p>Ảnh bảng giá mẫu</p>
 				</div>
 				<!-- /END FORM -->
 
