3B - update style shopping-cart

--- a/3B-WEB/shopping-cart.html
+++ b/3B-WEB/shopping-cart.html
@@ -296,21 +296,26 @@
 								<!-- BEGIN PRODUCT ITEM -->
 								<div class="p-item">
 									<div class="row">
-										<div class="col-md-7">
+										<div class="col-md-8">
 											<div class="chk pull-left">
-												<input type="checkbox" name="chk1" id="chk1" class="chk-custom" >
-												<label for="chk1" class="chk-custom-label"></label>
+												<input type="checkbox" name="chk4" id="chk4" class="chk-custom" >
+												<label for="chk4" class="chk-custom-label"></label>
 											</div>
 
 											<img class="pull-left p-image" src="assets/images/img28.png">
 											<div class="p-info pull-left">
-												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+												<div class="name margin-b3">Korean Style Coat - High Quality Product with long long long text</div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="txt-green">Group</span> <span class="sep">|</span> Status: <span class="txt-green">Waiting grafted</span></div>
+												<div class="method">
+													<span>Mua theo hình thức: <span class="txt-green">Nhóm</span></span>
+													<span class="sep">|</span>
+													<span>Trạng thái: <span class="txt-green">Waiting grafted</span></span>
+												</div>
 											</div>
+											<div class="clearfix"></div>
 										</div>
 
-										<div class="col-md-5">
+										<div class="col-md-4">
 											<a class="pull-right p-del" href="#"><img src="assets/images/svg/close.svg"></a>
 
 											<div class="price pull-right">
@@ -332,7 +337,7 @@
 								<!-- BEGIN PRODUCT ITEM -->
 								<div class="p-item">
 									<div class="row">
-										<div class="col-md-7">
+										<div class="col-md-8">
 											<div class="chk pull-left">
 												<input type="checkbox" name="chk2" id="chk2" class="chk-custom" >
 												<label for="chk2" class="chk-custom-label"></label>
@@ -340,13 +345,18 @@
 
 											<img class="pull-left p-image" src="assets/images/img28.png">
 											<div class="p-info pull-left">
-												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+												<div class="name margin-b3 custom-wrap-1line">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="txt-green">Group</span> <span class="sep">|</span> Status: <span class="txt-green">Waiting grafted</span></div>
+												<div class="method">
+													<span>Mua theo hình thức: <span class="txt-green">Nhóm</span></span>
+													<span class="sep">|</span>
+													<span>Trạng thái: <span class="txt-green">Waiting grafted</span></span>
+												</div>
 											</div>
+											<div class="clearfix"></div>
 										</div>
 
-										<div class="col-md-5">
+										<div class="col-md-4">
 											<a class="pull-right p-del" href="#"><img src="assets/images/svg/close.svg"></a>
 
 											<div class="price pull-right">
@@ -390,7 +400,7 @@
 								<!-- BEGIN PRODUCT ITEM -->
 								<div class="p-item">
 									<div class="row">
-										<div class="col-md-7">
+										<div class="col-md-8">
 											<div class="chk pull-left">
 												<input type="checkbox" name="chk3" id="chk3" class="chk-custom" >
 												<label for="chk3" class="chk-custom-label"></label>
@@ -398,13 +408,18 @@
 
 											<img class="pull-left p-image" src="assets/images/img28.png">
 											<div class="p-info pull-left">
-												<div class="name margin-b3">Korean Style Coat - High Quality Product</div>
+												<div class="name margin-b3 custom-wrap-1line">Lorem Ipsum chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản.</div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="txt-green">Group</span> <span class="sep">|</span> Status: <span class="txt-green">Waiting grafted</span></div>
+												<div class="method">
+													<span>Mua theo hình thức: <span class="txt-green">Nhóm</span></span>
+													<span class="sep">|</span>
+													<span>Trạng thái: <span class="txt-green">Waiting grafted</span></span>
+												</div>
 											</div>
+											<div class="clearfix"></div>
 										</div>
 
-										<div class="col-md-5">
+										<div class="col-md-4">
 											<a class="pull-right p-del" href="#"><img src="assets/images/svg/close.svg"></a>
 
 											<div class="price pull-right">
@@ -426,7 +441,7 @@
 								<!-- BEGIN PRODUCT ITEM -->
 								<div class="p-item">
 									<div class="row">
-										<div class="col-md-7">
+										<div class="col-md-8">
 											<div class="chk pull-left">
 												<input type="checkbox" name="chk4" id="chk4" class="chk-custom" >
 												<label for="chk4" class="chk-custom-label"></label>
@@ -436,11 +451,16 @@
 											<div class="p-info pull-left">
 												<div class="name margin-b3">Korean Style Coat - High Quality Product with long long long text</div>
 												<div class="size-color margin-b3">Size : M <span class="sep">|</span> Color: Green</div>
-												<div class="method">Buy method: <span class="txt-green">Group</span> <span class="sep">|</span> Status: <span class="txt-green">Waiting grafted</span></div>
+												<div class="method">
+													<span>Mua theo hình thức: <span class="txt-green">Nhóm</span></span>
+													<span class="sep">|</span>
+													<span>Trạng thái: <span class="txt-green">Waiting grafted</span></span>
+												</div>
 											</div>
+											<div class="clearfix"></div>
 										</div>
 
-										<div class="col-md-5">
+										<div class="col-md-4">
 											<a class="pull-right p-del" href="#"><img src="assets/images/svg/close.svg"></a>
 
 											<div class="price pull-right">
