3B - update style menu + text big image in grafting-list

--- a/3B-NEW/buyer-order-pairing.html
+++ b/3B-NEW/buyer-order-pairing.html
@@ -180,15 +180,15 @@
 				<div class="buyer-order">
 					<div class="filter">
 						<ul>
-							<li><a href="buyer-order-waiting-payment.html">Waiting payment</a></li>
-							<li class="active"><a href="buyer-order-pairing.html">Pairing <span class="notify_number">32</span></a></li>
-							<li><a href="buyer-order-waiting-confirm.html">Waiting confirm</a></li>
-							<li><a href="buyer-order-waiting-ship.html">Wait ship</a></li>
-							<li><a href="buyer-order-shipping.html">Shipping</a></li>
-							<li><a href="buyer-order-delivered.html">Delivered</a></li>
-							<li><a href="#">To recieve</a></li>
-							<li><a href="buyer-order-canceled.html">Canceled</a></li>
-							<li><a href="buyer-order-return.html">Return / Refund</a></li>
+							<li><a href="buyer-order-waiting-payment.html">Chờ thanh toán</a></li>
+							<li class="active"><a href="buyer-order-pairing.html">Ghép đơn <span class="notify_number">32</span></a></li>
+							<li><a href="buyer-order-waiting-confirm.html">Chờ xác nhận</a></li>
+							<li><a href="buyer-order-waiting-ship.html">Chờ lấy hàng</a></li>
+							<li><a href="buyer-order-shipping.html">Đang giao<span class="notify_number">190</span></a></li>
+							<li><a href="buyer-order-delivered.html">Đã giao hàng <span class="notify_number">32</span></a></li>
+							<!-- <li><a href="#">To recieve</a></li> -->
+							<li><a href="buyer-order-canceled.html">Đơn hủy <span class="notify_number">12</span></a></li>
+							<li><a href="buyer-order-return.html">Trả hàng / Hoàn tiền <span class="notify_number">32</span></a></li>
 						</ul>
 					</div>
 				</div>
