--- a/3B-NEW/buyer-order-grafting-list.html
+++ b/3B-NEW/buyer-order-grafting-list.html
@@ -180,14 +180,14 @@
 				<div class="buyer-order">
 					<div class="filter">
 						<ul>
-							<li class="active"><a href="buyer-order-pairing.html">Pairing</a></li>
-							<li><a href="buyer-order-waiting-confirm.html">Waiting confirm</a></li>
-							<li><a href="buyer-order-waiting-ship.html">Wait ship</a></li>
-							<li><a href="buyer-order-shipping.html">Shipping</a></li>
-							<li><a href="buyer-order-delivered.html">Delivered</a></li>
-							<li><a href="#">To recieve</a></li>
-							<li><a href="buyer-order-canceled.html">Canceled</a></li>
-							<li><a href="buyer-order-return.html">Return / Refund</a></li>
+							<li><a href="buyer-order-waiting-payment.html">Chờ thanh toán</a></li>
+							<li class="active"><a href="buyer-order-pairing.html">Ghép đơn <span class="notify_number">32</span></a></li>
+							<li><a href="buyer-order-waiting-confirm.html">Chờ xác nhận</a></li>
+							<li><a href="buyer-order-waiting-ship.html">Chờ lấy hàng</a></li>
+							<li><a href="buyer-order-shipping.html">Đang giao<span class="notify_number">190</span></a></li>
+							<li><a href="buyer-order-delivered.html">Đã giao hàng <span class="notify_number">32</span></a></li>
+							<li><a href="buyer-order-canceled.html">Đơn hủy <span class="notify_number">12</span></a></li>
+							<li><a href="buyer-order-return.html">Trả hàng / Hoàn tiền <span class="notify_number">32</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -207,7 +207,7 @@
 								<div class="p-item">
 									<div class="row">
 										<div class="col-md-6">
-											<img class="pull-left p-image" src="assets/images/img28.png">
+											<img class="pull-left p-image" src="assets/images/img3.jpg">
 											<div class="p-info pull-left">
 												<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
 												<div class="price">
